--- a/webapp/app/views/mailers/notification/job_notification_email.slim
+++ b/webapp/app/views/mailers/notification/job_notification_email.slim
@@ -1,10 +1,12 @@
-p = "Hello #{name},"
-p Your job is complete.
-p
-  b Job ID 
-  = id
-p
-  b Job description 
-  = description
-p
-  == "You can access the job in this <a href=\"#{url}\">link</a>, or through the site."
+= "Hello #{name}\n\n"
+
+= "Your job is complete.\n\n"
+
+= "Job description\n"
+= "#{description}\n\n"
+
+= "You can access the results in the following link:\n"
+= "#{url}\n\n"
+
+= "Best regards,\n"
+= "PBS Finder"
