Bad font removed.

--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -4,12 +4,12 @@
 
 .general-info {
   .species {
-    font-family: Varela;
+    font-family: Ubuntu;
     color: #428bca;
     font-size: 1.8em;
   }
   .stats {
-    font-family: Varela;
+    font-family: Ubuntu;
     color: #428bca;
     font-size: 1.2em;
   }
