--- a/webapp/app/stylesheets/login.scss
+++ b/webapp/app/stylesheets/login.scss
@@ -27,7 +27,7 @@ $urlprefix: '/pbsfinder';
   border-bottom: 1px solid #e5e5e5;
   p {
     margin-bottom:0;
-    font-family: 'Varela', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     text-transform: uppercase;
     font-size: 2em;
     color: #428bca;
