--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -2,11 +2,11 @@
   margin-top: 30px; }
 
 .general-info .species {
-  font-family: Varela;
+  font-family: Ubuntu;
   color: #428bca;
   font-size: 1.8em; }
 .general-info .stats {
-  font-family: Varela;
+  font-family: Ubuntu;
   color: #428bca;
   font-size: 1.2em; }
 .general-info .btn-group {
