--- a/webapp/public/pbsfinder/stylesheets/login.css
+++ b/webapp/public/pbsfinder/stylesheets/login.css
@@ -25,7 +25,7 @@
   border-bottom: 1px solid #e5e5e5; }
   .login-head p {
     margin-bottom: 0;
-    font-family: 'Varela', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     text-transform: uppercase;
     font-size: 2em;
     color: #428bca; }
