--- a/webapp/app/views/layouts/_footer.slim
+++ b/webapp/app/views/layouts/_footer.slim
@@ -12,4 +12,12 @@ footer
       li = link_to 'About me', 'http://diogoteixeira.eu', :class => 'footer-links-link'
       li = link_to 'Source code', 'https://github.com/dteixeira/PBSFinder', :class => 'footer-links-link'
 
-
+  div class="footer-wrapper container-non-responsive affiliation"
+    div class="affiliate-wrapper"
+      ul class='affiliates'
+        li class='affiliate small'
+          = image_tag 'liaad.png'
+        li class='affiliate'
+          = image_tag 'ibmc.png'
+        li class='affiliate small'
+          = image_tag 'fct.png'
