--- a/webapp/app/stylesheets/main.scss
+++ b/webapp/app/stylesheets/main.scss
@@ -49,6 +49,23 @@ footer p {
   margin-bottom: 0;
   color:#8A8A8A;
 }
+.affiliate-wrapper {
+  display: table;
+  margin: 0 auto;
+}
+.affiliation {
+  margin-top:60px;
+}
+.affiliate {
+  display:inline-block;
+  padding:0 40px 0 40px;
+  &.small img {
+    width:135px;
+  }
+  img {
+    width:200px;
+  }
+}
 .footer-links {
   padding-right:15px;
 }
