--- a/webapp/public/pbsfinder/stylesheets/main.css
+++ b/webapp/public/pbsfinder/stylesheets/main.css
@@ -45,6 +45,21 @@ footer p {
   margin-bottom: 0;
   color: #8A8A8A; }
 
+.affiliate-wrapper {
+  display: table;
+  margin: 0 auto; }
+
+.affiliation {
+  margin-top: 60px; }
+
+.affiliate {
+  display: inline-block;
+  padding: 0 40px 0 40px; }
+  .affiliate.small img {
+    width: 135px; }
+  .affiliate img {
+    width: 200px; }
+
 .footer-links {
   padding-right: 15px; }
 
