--- a/webapp/public/pbsfinder/stylesheets/jobs/list.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/list.css
@@ -12,7 +12,9 @@
     padding-left: 20px; }
 
 #list tr td:nth-child(3) {
-  width: 160px; }
+  min-width: 160px; }
+#list tr td:nth-child(2) {
+  min-width: 150px; }
 
 .pager {
   margin-top: 50px; }
