--- a/webapp/public/pbsfinder/stylesheets/main.css
+++ b/webapp/public/pbsfinder/stylesheets/main.css
@@ -57,6 +57,8 @@ footer p {
   padding: 0 40px 0 40px; }
   .affiliate.small img {
     width: 135px; }
+  .affiliate.medium img {
+    width: 180px; }
   .affiliate img {
     width: 200px; }
 
@@ -351,5 +353,44 @@ table.floatThead-table {
   padding-top: 0; }
   .logo img {
     height: 50px; }
+
+.bs-callout {
+  margin: 20px 0;
+  padding: 20px;
+  border-left: 3px solid #eee; }
+  .bs-callout h4 {
+    font-family: Ubuntu; }
+
+.bs-callout h4 {
+  margin-top: 0;
+  margin-bottom: 5px; }
+
+.bs-callout p:last-child {
+  margin-bottom: 0; }
+
+.bs-callout code {
+  background-color: #fff;
+  border-radius: 3px; }
+
+.bs-callout-danger {
+  background-color: #fdf7f7;
+  border-color: #d9534f; }
+
+.bs-callout-danger h4 {
+  color: #d9534f; }
+
+.bs-callout-warning {
+  background-color: #fcf8f2;
+  border-color: #f0ad4e; }
+
+.bs-callout-warning h4 {
+  color: #f0ad4e; }
+
+.bs-callout-info {
+  background-color: #f4f8fa;
+  border-color: #428bca; }
+
+.bs-callout-info h4 {
+  color: #428bca; }
 
 /* -- End Application -- */
