--- a/webapp/app/views/jobs/new.slim
+++ b/webapp/app/views/jobs/new.slim
@@ -3,25 +3,15 @@
 - content_for :javascripts do
     = javascript_include_tag 'jobs/create_mail'
 div class="tabs-content"
-  div class="panel panel-info"
-    div class="panel-heading"
-      h3 class="panel-title" = t('job.create.notice.title')
-    table class="table"
-      tbody
-        tr class='list-row'
-          td class='list-column'
-            span class="list-title" = t('job.create.notice.notice1.title')
-          td class='list-column'
-            span = t('job.create.notice.notice1.content')
-        tr class='list-row'
-          td class='list-column'
-            span class="list-title" = t('job.create.notice.notice3.title')
-          td class='list-column'
-            span = t('job.create.notice.notice3.content')
-        tr class='list-row'
-          td class='list-column'
-            span class="list-title" = t('job.create.notice.notice4.title')
-          td class='list-column'
-            span = t('job.create.notice.notice4.content')
+
+  div class="description"
+    div class="bs-callout bs-callout-info"
+      h4 = t('job.create.notice.notice1.title')
+      p = t('job.create.notice.notice1.content')
+      h4 = t('job.create.notice.notice3.title')
+      p = t('job.create.notice.notice3.content')
+      h4 = t('job.create.notice.notice4.title')
+      p = t('job.create.notice.notice4.content')
+
   = form_for :job, url(:jobs, :create), :class => 'form-horizontal', :id => 'job-form' do |f|
     = partial 'jobs/form', :locals => { :f => f }
