--- a/webapp/app/views/layouts/_footer.slim
+++ b/webapp/app/views/layouts/_footer.slim
@@ -15,6 +15,8 @@ footer
   div class="footer-wrapper container-non-responsive affiliation"
     div class="affiliate-wrapper"
       ul class='affiliates'
+        li class='affiliate medium'
+          = image_tag 'feup.png'
         li class='affiliate small'
           = image_tag 'liaad.png'
         li class='affiliate'
