--- a/webapp/app/stylesheets/jobs/list.scss
+++ b/webapp/app/stylesheets/jobs/list.scss
@@ -23,6 +23,9 @@
     min-width:150px;
   }
 }
+.bs-callout {
+  margin-top:0;
+}
 .pager {
   margin-top:50px;
   .next_page, .previous_page, a, em {
