--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -137,3 +137,12 @@ th {
     text-align:justify;
   }
 }
+.original, .toggle-converted {
+  display:none;
+}
+.chart-name {
+  margin-top:20px;
+}
+.chart {
+  height:320px;
+}
