--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -4,10 +4,10 @@
   - content_for :javascripts do
     = javascript_include_tag 'jquery.thead.min', 'jobs/toggle_ids'
 
-  - unless @job.valid
-    div class="bs-callout bs-callout-danger"
-      h4 = t('job.view.bad_job.notice.title')
-      p = t('job.view.bad_job.notice.content')
+- else
+  div class="bs-callout bs-callout-danger"
+    h4 = t('job.view.bad_job.notice.title')
+    p = t('job.view.bad_job.notice.content')
 
 - if @job.completed
   - content_for :javascripts do
