--- a/webapp/public/pbsfinder/stylesheets/jobs/job.css
+++ b/webapp/public/pbsfinder/stylesheets/jobs/job.css
@@ -40,6 +40,7 @@
   .table-container .table {
     margin-bottom: 0px; }
     .table-container .table td {
+      min-width: 30px;
       vertical-align: middle;
       text-align: center; }
       .table-container .table td.protein {
@@ -113,3 +114,45 @@ th {
 
 .converted a {
   color: #47a447; }
+
+table th.rotate-45 span {
+  width: 30px;
+  display: inline-block;
+  transform: rotate(-90deg);
+  /* W3C */
+  -webkit-transform: rotate(-90deg);
+  /* Safari & Chrome */
+  -moz-transform: rotate(-90deg);
+  /* Firefox */
+  -ms-transform: rotate(-90deg);
+  /* Internet Explorer */
+  -o-transform: rotate(-90deg);
+  /* Opera */
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.rotated-text {
+  display: inline-block;
+  overflow: hidden;
+  width: 1.5em;
+  line-height: 1.5; }
+
+.rotated-text-inner {
+  display: inline-block;
+  white-space: nowrap;
+  transform: rotate(-90deg);
+  /* W3C */
+  -webkit-transform: rotate(-90deg);
+  /* Safari & Chrome */
+  -moz-transform: rotate(-90deg);
+  /* Firefox */
+  -ms-transform: rotate(-90deg);
+  /* Internet Explorer */
+  -o-transform: rotate(-90deg);
+  /* Opera */
+  transform-origin: 0 0; }
+
+.rotated-text-inner:after {
+  content: "";
+  float: left;
+  margin-top: 100%; }
