--- a/webapp/app/stylesheets/jobs/job.scss
+++ b/webapp/app/stylesheets/jobs/job.scss
@@ -87,7 +87,7 @@
     tr {
       border-bottom: solid 1px #dddddd;
       &.striped {
-        background-color: #fafafa;
+        /*background-color: #fafafa;*/
       }
       &:hover {
         opacity:1;
