--- a/webapp/app/views/jobs/list.slim
+++ b/webapp/app/views/jobs/list.slim
@@ -12,7 +12,7 @@ div class="tabs-content"
 
   - else
     div class="table-responsive"
-      table class="table table-striped table-hover table-condensed" id="list"
+      table class="table table-hover table-condensed" id="list"
         thead
           tr
             th class='header list-menu'
