--- a/webapp/app/views/jobs/job.slim
+++ b/webapp/app/views/jobs/job.slim
@@ -78,11 +78,11 @@ div class="info"
         tr
           td class="stripe visual"
           td = t('job.view.legend_stripe')
-          td class="red visual divider" GENE ID
+          td class="red visual divider" IDENTIFIER
           td = t('job.view.legend_red')
-          td class="green visual divider" GENE ID
+          td class="green visual divider" IDENTIFIER
           td = t('job.view.legend_green')
-          td class="blue visual divider" TRANSCRIPT ID
+          td class="blue visual divider" IDENTIFIER
           td = t('job.view.legend_blue')
 
     div class="table-container table-responsive" id="protein-table-wrapper"
@@ -98,7 +98,11 @@ div class="info"
             - @job.bind_proteins.each do |prot, v|
               th
                 span class="rotated-text"
-                  span class="rotated-text-inner" = prot
+                  - if v['id']
+                    span class="rotated-text-inner external"
+                      a href="http://www.uniprot.org/uniprot/#{v['id']}" = prot
+                  - else
+                    span class="rotated-text-inner" = prot
 
         tbody
           - even = false
@@ -117,7 +121,7 @@ div class="info"
                 td rowspan="#{gene.transcripts.size}"
                   = gene.species
                 td rowspan="#{gene.transcripts.size}"
-                  span class="converted" == gene_link(gene.converted_id, gene.name, gene.species)
+                  span class="converted" == gene_link(gene.converted_id, gene.org, gene.name, gene.species)
                   span class="original" = gene.original_id
                 td
                   - trans = gene.transcripts.first
@@ -137,7 +141,7 @@ div class="info"
                     td
                       = gene.species
                     td
-                      span class="converted" == gene_link(gene.converted_id, gene.name, gene.species)
+                      span class="converted" == gene_link(gene.converted_id, gene.org, gene.name, gene.species)
                       span class="original" = gene.original_id
                     - trans = gene.transcripts.first
                     td
@@ -151,7 +155,7 @@ div class="info"
                   td rowspan="#{gene.transcripts.size + 1}"
                     = gene.species
                   td rowspan="#{gene.transcripts.size + 1}"
-                    span class="converted" == gene_link(gene.converted_id, gene.name, gene.species)
+                    span class="converted" == gene_link(gene.converted_id, gene.org, gene.name, gene.species)
                     span class="original" = gene.original_id
                 - gene.transcripts.each do |trans|
                   tr class="#{even ? 'striped' : ''}"
